// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-stack> component basic usage 1`] = `
<bolt-stack>
  <ssr-keep for="bolt-stack"
            class="c-bolt-stack c-bolt-example--spacing-medium"
  >
    This is one stack. A stack spans the full width of its parent container.
  </ssr-keep>
</bolt-stack>
<bolt-stack>
  <ssr-keep for="bolt-stack"
            class="c-bolt-stack c-bolt-example--spacing-medium"
  >
    This is another stack.
  </ssr-keep>
</bolt-stack>
`;

exports[`<bolt-stack> component outer CSS class via Drupal Attributes 1`] = `
<bolt-stack class="u-bolt-color-teal">
  <ssr-keep for="bolt-stack"
            class="c-bolt-stack c-bolt-example--spacing-medium"
  >
    This is a stack
  </ssr-keep>
</bolt-stack>
`;

exports[`<bolt-stack> component stack spacing: large 1`] = `
<bolt-stack>
  <ssr-keep for="bolt-stack"
            class="c-bolt-stack c-bolt-example--spacing-medium"
  >
    This is one stack. A stack spans the full width of its parent container.
  </ssr-keep>
</bolt-stack>
<bolt-stack>
  <ssr-keep for="bolt-stack"
            class="c-bolt-stack c-bolt-example--spacing-medium"
  >
    This is another stack.
  </ssr-keep>
</bolt-stack>
`;

exports[`<bolt-stack> component stack spacing: medium 1`] = `
<bolt-stack>
  <ssr-keep for="bolt-stack"
            class="c-bolt-stack c-bolt-example--spacing-medium"
  >
    This is one stack. A stack spans the full width of its parent container.
  </ssr-keep>
</bolt-stack>
<bolt-stack>
  <ssr-keep for="bolt-stack"
            class="c-bolt-stack c-bolt-example--spacing-medium"
  >
    This is another stack.
  </ssr-keep>
</bolt-stack>
`;

exports[`<bolt-stack> component stack spacing: none 1`] = `
<bolt-stack>
  <ssr-keep for="bolt-stack"
            class="c-bolt-stack c-bolt-example--spacing-medium"
  >
    This is one stack. A stack spans the full width of its parent container.
  </ssr-keep>
</bolt-stack>
<bolt-stack>
  <ssr-keep for="bolt-stack"
            class="c-bolt-stack c-bolt-example--spacing-medium"
  >
    This is another stack.
  </ssr-keep>
</bolt-stack>
`;

exports[`<bolt-stack> component stack spacing: small 1`] = `
<bolt-stack>
  <ssr-keep for="bolt-stack"
            class="c-bolt-stack c-bolt-example--spacing-medium"
  >
    This is one stack. A stack spans the full width of its parent container.
  </ssr-keep>
</bolt-stack>
<bolt-stack>
  <ssr-keep for="bolt-stack"
            class="c-bolt-stack c-bolt-example--spacing-medium"
  >
    This is another stack.
  </ssr-keep>
</bolt-stack>
`;

exports[`<bolt-stack> component stack spacing: xlarge 1`] = `
<bolt-stack>
  <ssr-keep for="bolt-stack"
            class="c-bolt-stack c-bolt-example--spacing-medium"
  >
    This is one stack. A stack spans the full width of its parent container.
  </ssr-keep>
</bolt-stack>
<bolt-stack>
  <ssr-keep for="bolt-stack"
            class="c-bolt-stack c-bolt-example--spacing-medium"
  >
    This is another stack.
  </ssr-keep>
</bolt-stack>
`;

exports[`<bolt-stack> component stack spacing: xsmall 1`] = `
<bolt-stack>
  <ssr-keep for="bolt-stack"
            class="c-bolt-stack c-bolt-example--spacing-medium"
  >
    This is one stack. A stack spans the full width of its parent container.
  </ssr-keep>
</bolt-stack>
<bolt-stack>
  <ssr-keep for="bolt-stack"
            class="c-bolt-stack c-bolt-example--spacing-medium"
  >
    This is another stack.
  </ssr-keep>
</bolt-stack>
`;
